--- a/app/src/main/res/layout/activity_sortin_list.xml
+++ b/app/src/main/res/layout/activity_sortin_list.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,23 +9,12 @@
         android:id="@+id/titleBar"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        app:rightTextVisibility="true"
-        app:titleText="分拣领用"
-        app:rightText="添加"
+        app:rightTextVisibility="false"
+        app:titleText="分拣入库单"
         />
 
     <com.androidkun.PullToRefreshRecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/titleBar"
         android:id="@+id/recyclerView"/>
-
-    <ImageView
-        android:id="@+id/iv_add"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_margin="20dp"
-        android:background="@drawable/ic_add"/>
-</RelativeLayout>
+</LinearLayout>
