--- a/app/src/main/res/layout/frag_home.xml
+++ b/app/src/main/res/layout/frag_home.xml
@@ -122,6 +122,63 @@
                     android:layout_below="@+id/user_info_ll"
                     android:background="@color/colorPrimary" />
             </RelativeLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:orientation="horizontal"
+                android:paddingLeft="30dp"
+                android:paddingRight="30dp">
+
+                <LinearLayout
+                    android:id="@+id/ll_sort_req"
+                    android:layout_width="0dp"
+                    android:layout_height="104dp"
+                    android:layout_marginRight="16dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/white_round10_bg"
+                    android:clickable="true"
+                    android:elevation="1dp"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:layout_width="53dp"
+                        android:layout_height="53dp"
+                        android:layout_marginBottom="8dp"
+                        android:src="@mipmap/icon_home_pd" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="分拣领单"
+                        android:textSize="16dp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/ll_sort_in"
+                    android:layout_width="0dp"
+                    android:layout_height="104dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/white_round10_bg"
+                    android:clickable="true"
+                    android:elevation="1dp"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:layout_width="53dp"
+                        android:layout_height="53dp"
+                        android:layout_marginBottom="8dp"
+                        android:src="@mipmap/icon_home_qh" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="分拣入库"
+                        android:textSize="16dp" />
+                </LinearLayout>
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
