--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -33,7 +33,7 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
-    <style name="customer_spinner_style"  parent="@android:style/Widget.TextView.SpinnerItem">
+    <style name="customer_spinner_style">
         <item name="android:textSize">12sp</item><!--可以按照自己的情况在里面设定-->
     </style>
 </resources>
