--- a/app/src/main/res/layout/item_upload_image.xml
+++ b/app/src/main/res/layout/item_upload_image.xml
@@ -11,8 +11,7 @@
         android:layout_width="35dp"
         android:layout_height="wrap_content"
         android:src="@mipmap/btn_add"
-        android:scaleType="fitCenter"
-        android:adjustViewBounds="true"
+        android:scaleType="centerInside"
         android:layout_centerInParent="true"
         android:id="@+id/selected_image"/>
 </RelativeLayout>
