--- a/app/src/main/res/layout/item_sort_detail.xml
+++ b/app/src/main/res/layout/item_sort_detail.xml
@@ -136,6 +136,7 @@
         <LinearLayout
             android:layout_width="0dp"
             android:layout_weight="1"
+            android:visibility="invisible"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
             <TextView
