--- a/app/src/main/res/layout/activity_add_sortin.xml
+++ b/app/src/main/res/layout/activity_add_sortin.xml
@@ -188,6 +188,7 @@
                     android:layout_height="match_parent"
                     android:layout_marginLeft="30dp"
                     android:layout_weight="1"
+                    android:gravity="center_vertical"
                     android:background="@drawable/bg_round_gray"
                     android:paddingLeft="5dp" />
             </LinearLayout>
@@ -228,8 +229,7 @@
                     android:layout_centerVertical="true"
                     android:background="@drawable/bg_btn_green"
                     android:gravity="center"
-                    android:text="添加"
-                    android:visibility="gone"
+                    android:text="保存"
                     android:textColor="@color/white"
                     android:textSize="14sp" />
 
