--- a/app/src/main/res/layout/popup_select.xml
+++ b/app/src/main/res/layout/popup_select.xml
@@ -2,18 +2,29 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:background="@color/white"
+    android:background="#AA9E9E9E"
+    android:id="@+id/linear_content"
     android:layout_height="match_parent">
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="200dp"
+        android:background="@color/white"
+        android:orientation="horizontal"
+        >
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_category"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_weight="1"/>
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_type"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_weight="1"/>
+    </LinearLayout>
 
 </LinearLayout>
