--- a/app/src/main/res/layout/activity_add_sorting_req.xml
+++ b/app/src/main/res/layout/activity_add_sorting_req.xml
@@ -46,6 +46,7 @@
             android:layout_marginLeft="30dp"
             android:spinnerMode="dropdown"
             android:gravity="center"
+            android:textColor="@color/black"
             android:textSize="14sp"
             android:theme="@style/customer_spinner_style"
             android:background="@drawable/shape_spinnner_normal"
@@ -75,6 +76,7 @@
             android:layout_marginLeft="62dp"
             android:spinnerMode="dropdown"
             android:gravity="center"
+            android:textColor="@color/black"
             android:textSize="14sp"
             android:background="@drawable/bg_round_gray"
             />
@@ -109,6 +111,7 @@
             android:layout_marginLeft="55dp"
             android:spinnerMode="dropdown"
             android:gravity="center"
+            android:textColor="@color/black"
             android:textSize="14sp"
             android:background="@drawable/bg_round_gray"
             />
@@ -145,6 +148,7 @@
             android:spinnerMode="dropdown"
             android:gravity="center"
             android:textSize="14sp"
+            android:textColor="@color/black"
             android:background="@drawable/bg_round_gray"
             />
 
@@ -179,6 +183,7 @@
             android:spinnerMode="dropdown"
             android:gravity="center"
             android:textSize="14sp"
+            android:textColor="@color/black"
             android:background="@drawable/bg_round_gray"
             />
 
@@ -214,6 +219,7 @@
             android:spinnerMode="dropdown"
             android:gravity="center"
             android:textSize="14sp"
+            android:textColor="@color/black"
             android:background="@drawable/bg_round_gray"
             />
 
@@ -233,7 +239,7 @@
             android:text="领用数量"
             android:textSize="16sp"
             />
-        <TextView
+        <EditText
             android:id="@+id/tv_count"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -241,6 +247,8 @@
             android:spinnerMode="dropdown"
             android:gravity="center"
             android:textSize="14sp"
+            android:inputType="number"
+            android:textColor="@color/black"
             android:background="@drawable/bg_round_gray"
             />
 
