--- a/app/src/main/res/layout/item_sort_in.xml
+++ b/app/src/main/res/layout/item_sort_in.xml
@@ -31,7 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:textColor="@color/textGrayColor"
+            android:textColor="@color/black"
             android:textSize="14sp" />
 
         <TextView
