--- a/app/src/main/res/layout/item_depart_popup.xml
+++ b/app/src/main/res/layout/item_depart_popup.xml
@@ -13,9 +13,10 @@
     <TextView
         android:id="@+id/tv_name"
         android:layout_width="0dp"
-        android:layout_height="35dp"
-        android:textSize="14sp"
+        android:layout_height="40dp"
+        android:textSize="24sp"
         android:gravity="center"
+        android:text=""
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
         android:textColor="@color/black"
