--- a/app/src/main/res/layout/item_for_popup.xml
+++ b/app/src/main/res/layout/item_for_popup.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:gravity="center"
-    android:text="下拉列表项样式"
+    android:text=""
     android:textColor="@color/black"
-    android:textSize="14sp"
+    android:textSize="24sp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingTop="10dp"
