--- a/app/src/main/res/drawable/shape_round_normal.xml
+++ b/app/src/main/res/drawable/shape_round_normal.xml
@@ -4,15 +4,11 @@
         <shape>
             <stroke
                 android:width="1dp"
-                android:color="#D3D3D3" />
+                android:color="#999999" />
             <corners android:radius="5dp" />
             <solid android:color="#ffffff"></solid>
             <padding android:right="9dp" />
         </shape>
     </item>
-    <item>
-        <bitmap
-            android:gravity="end"
-            android:src="@drawable/ic_arrow_down" />
-    </item>
+
 </layer-list>
