--- a/app/src/main/res/layout/activity_create_sortin.xml
+++ b/app/src/main/res/layout/activity_create_sortin.xml
@@ -14,34 +14,42 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
+            <com.dclee.recovery.wedget.TitleBar
+                android:id="@+id/titleBar"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                app:titleText="添加"
+                />
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="100dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
                 android:layout_marginTop="10dp"
-                android:layout_marginLeft="15dp"
-                android:paddingLeft="5dp"
-                android:paddingRight="5dp"
                 android:background="@drawable/bg_round_gray"
                 android:gravity="center_vertical"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="15dp"
                     android:text="地磅读数"
-                    android:visibility="gone"
                     android:textColor="@color/black"
                     android:textSize="30sp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:visibility="gone" />
 
                 <EditText
                     android:id="@+id/tv_weight"
-                    android:layout_width="200dp"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
                     android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:inputType="numberDecimal"
                     android:background="@color/transparent"
+                    android:gravity="center"
+                    android:inputType="number"
                     android:textColor="@color/red"
                     android:textSize="70sp"
                     android:textStyle="bold" />
@@ -75,11 +83,11 @@
                     android:id="@+id/tv_select_person"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginLeft="30dp"
+                    android:layout_marginLeft="10dp"
                     android:background="@drawable/shape_spinnner_normal"
+                    android:gravity="center"
                     android:text="点击选择"
                     android:textSize="14sp"
-                    android:gravity="center"
                     android:theme="@style/customer_spinner_style" />
             </LinearLayout>
 
@@ -102,12 +110,12 @@
                     android:id="@+id/tv_type"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginLeft="30dp"
-                    android:gravity="center"
-                    android:textSize="14sp"
-                    android:text="点击选择"
+                    android:layout_marginLeft="10dp"
                     android:background="@drawable/shape_spinnner_normal"
+                    android:gravity="center"
                     android:spinnerMode="dropdown"
+                    android:text="点击选择"
+                    android:textSize="14sp"
                     android:theme="@style/customer_spinner_style" />
             </LinearLayout>
 
@@ -130,10 +138,10 @@
                     android:id="@+id/edt_weight"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_marginLeft="30dp"
+                    android:layout_marginLeft="10dp"
                     android:layout_weight="1"
-                    android:inputType="numberDecimal"
                     android:background="@drawable/bg_round_gray"
+                    android:inputType="number"
                     android:paddingLeft="5dp" />
 
                 <TextView
@@ -168,11 +176,12 @@
                     android:id="@+id/edt_buckle"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_marginLeft="30dp"
+                    android:layout_marginLeft="10dp"
                     android:layout_weight="1"
-                    android:inputType="numberDecimal"
                     android:background="@drawable/bg_round_gray"
-                    android:paddingLeft="5dp" />
+                    android:inputType="number"
+                    android:paddingLeft="5dp"
+                    android:text="0" />
             </LinearLayout>
 
             <LinearLayout
@@ -194,10 +203,10 @@
                     android:id="@+id/tv_netweight"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_marginLeft="30dp"
+                    android:layout_marginLeft="10dp"
                     android:layout_weight="1"
-                    android:gravity="center_vertical"
                     android:background="@drawable/bg_round_gray"
+                    android:gravity="center_vertical"
                     android:paddingLeft="5dp" />
             </LinearLayout>
 
@@ -251,7 +260,8 @@
                     android:gravity="center"
                     android:text="继续添加"
                     android:textColor="@color/white"
-                    android:textSize="14sp" />
+                    android:textSize="14sp"
+                    android:visibility="gone" />
 
                 <TextView
                     android:id="@+id/tv_back"
