--- a/app/src/main/res/layout/activity_add_sorting_req.xml
+++ b/app/src/main/res/layout/activity_add_sorting_req.xml
@@ -321,14 +321,16 @@
             android:textSize="16sp"
             />
 
-        <Spinner
-            android:id="@+id/spinner_type"
+        <TextView
+            android:id="@+id/tv_type"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginLeft="23dp"
             android:spinnerMode="dropdown"
+            android:gravity="center"
+            android:textSize="14sp"
             android:theme="@style/customer_spinner_style"
-            android:background="@drawable/shape_spinnner_normal"
+            android:background="@drawable/bg_round_gray"
             />
     </LinearLayout>
 
