--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,7 +13,7 @@
         android:layout_marginTop="100dp"
         android:layout_marginBottom="30dp"
         android:scaleType="fitCenter"
-        android:src="@mipmap/ic_meicheng" />
+        android:src="@drawable/ic_login" />
 
     <EditText
         android:id="@+id/et_account"
@@ -54,6 +54,7 @@
         android:layout_marginLeft="50dp"
         android:layout_marginTop="10dp"
         android:layout_marginRight="50dp"
+        android:visibility="gone"
         android:gravity="center_vertical">
 
         <CheckBox
