--- a/app/src/main/res/layout/frag_home.xml
+++ b/app/src/main/res/layout/frag_home.xml
@@ -32,6 +32,7 @@
                         android:layout_width="44dp"
                         android:layout_height="44dp"
                         android:layout_marginRight="12dp"
+                        android:background="@mipmap/ic_jdt"
                         android:onClick="toSettingActivity" />
 
                     <LinearLayout
@@ -85,7 +86,6 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="98dp"
                     android:layout_marginRight="10dp"
-                    android:background="@drawable/white_round15_bg"
                     android:elevation="3dp"
                     android:orientation="vertical">
 
@@ -95,22 +95,28 @@
                         android:layout_marginLeft="23dp"
                         android:layout_marginTop="12dp"
                         android:text="通知公告"
+                        android:visibility="gone"
                         android:textSize="16dp" />
 
                     <ScrollView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:paddingLeft="25dp"
-                        android:paddingTop="12dp"
-                        android:paddingRight="25dp"
-                        android:paddingBottom="12dp"
                         android:scrollbars="none">
 
-                        <TextView
+
+                        <ImageView
+                            android:id="@+id/iv_pic"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:scaleType="centerInside"
+
+                         />
+                      <!--  <TextView
                             android:id="@+id/news"
+                            android:visibility="gone"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent" />
-
+-->
                     </ScrollView>
 
                 </LinearLayout>
@@ -331,9 +337,9 @@
                     android:id="@+id/ll_checkOrderAct"
                     android:layout_width="0dp"
                     android:layout_height="104dp"
-                    android:layout_marginRight="16dp"
+                    android:layout_marginLeft="16dp"
                     android:layout_weight="1"
-                    android:visibility="invisible"
+                    android:visibility="visible"
 
                     android:background="@drawable/white_round10_bg"
                     android:elevation="1dp"
@@ -344,12 +350,12 @@
                         android:layout_width="53dp"
                         android:layout_height="53dp"
                         android:layout_marginBottom="8dp"
-                        android:src="@mipmap/icon_home_pd" />
+                        android:src="@mipmap/icon_found_unitprice" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="已审核"
+                        android:text="分拣汇总"
                         android:textSize="16dp" />
                 </LinearLayout>
 
